# pongogo-to-go

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SESSION_HANDOFF.md  pyproject.toml
.claude/commands/: pongogo-config.md  pongogo-contact.md  pongogo-diagnose.md  pongogo-done.md  pongogo-getting-started.md  pongogo-log.md  pongogo-rca.md  pongogo-retro.md  pongogo-status.md  pongogo-upgrade.md
.github/workflows/: ci.yml  deploy.yml  docker.yml  release-alpha.yml  release-beta.yml  release-stable.yml
commands/: pongogo-config.md  pongogo-done.md  pongogo-log.md  pongogo-rca.md  pongogo-recent-progress.md  pongogo-retro.md  pongogo-status.md
docs/: .gitkeep  deployment_architecture.md  seeded_instructions.md
docs/design/: cicd_workflow_specifications.md  core-loop-automation.md  docker_test_environment.md  ground_truth_system.md  lifecycle-triggers.md  mock_mcp_client.md  precommit_configuration.md  routing-registry.md  seeded-instructions-analysis.md  seeded-instructions-procedure.md  spike_362_coherence_assessment.md  test_pyramid_layers.md
docs/reference/: preferences.md
instructions/: manifest.yaml
instructions/_pongogo_core/: .gitkeep  _pongogo_collaboration.instructions.md  incident_handling.instructions.md  issue_closure.instructions.md  issue_creation.instructions.md  issue_status.instructions.md  learning_loop.instructions.md  pi_tracking.instructions.md  planning.instructions.md  user_guidance_capture.instructions.md  work_logging.instructions.md
instructions/agentic_workflows/: agent_compliance_framework.instructions.md  agent_environment_setup.instructions.md  agentic_decision_making.instructions.md  multi_pass_iterative_analysis.instructions.md
instructions/architecture/: repository_organization.instructions.md
instructions/development/: token_usage_context_management.instructions.md
instructions/devops/: audit_logging_patterns.instructions.md  observability_patterns.instructions.md
instructions/documentation/: instruction_file_creation.instructions.md
instructions/github_integration/: github_essentials.instructions.md  github_sub_issues.instructions.md
instructions/project_management/: .gitkeep  glossary_maintenance.instructions.md  scope_creep_prevention.instructions.md  time_free_project_management.instructions.md  work_log_monthly_summary.instructions.md  work_log_weekly_summary.instructions.md  work_logging.instructions.md
instructions/quality/: environment_configuration.instructions.md  pull_request_workflow.instructions.md
instructions/safety_prevention/: git_safety.instructions.md  systematic_prevention_framework.instructions.md  validation_first_execution.instructions.md
instructions/software_engineering/: .gitkeep  commit_message_format.instructions.md  git_safety.instructions.md  python_script_development.instructions.md
instructions/testing/: observability_testing.instructions.md
instructions/trust_execution/: development_workflow_essentials.instructions.md  feature_development.instructions.md  trust_based_task_execution.instructions.md
instructions/validation/: deterministic_validation_framework.instructions.md  validation_essentials.instructions.md  verification_efficiency.instructions.md
scripts/: diagnose_guidance.py  install.sh
src/cli/: .gitkeep  __init__.py  config.py  console.py  discoveries.py  init_command.py  instructions.py  main.py  preferences.py  setup_mcp.py  uninstall.py
src/mcp-server/: .gitkeep  config.py  instruction_handler.py  pongogo-config.example.yaml  router.py  routing_engine.py  server.py
src/mcp-server/engines/: __init__.py  durian_00.py  durian_05.py  durian_051.py
src/mcp-server/pi_system/: __init__.py  cli.py  database.py  models.py  operations.py  sync.py
src/mcp_server/: __init__.py  cli.py  config.py  context_disambiguation.py  event_capture.py  formatter.py  health_check.py  instruction_handler.py  lexicon.db  lexicon_db.py  lexicon_loader.py  pongogo-config.example.yaml  pongogo_router.py  requirements.txt  router.py  routing_engine.py  server.py  upgrade.py
src/mcp_server/database/: __init__.py  artifacts.py  database.py  events.py  observations.py  triggers.py
src/mcp_server/discovery_system/: __init__.py  database.py  operations.py  scanner.py
src/mcp_server/engines/: __init__.py  durian_00.py  durian_05.py  durian_051.py
src/mcp_server/lexicon/: explicit_guidance.yaml  implicit_guidance.yaml  schema.yaml
src/mcp_server/pi_system/: __init__.py  cli.py  database.py  models.py  operations.py  queries.py  sync.py
templates/: preferences.yaml
tests/: Dockerfile  Dockerfile.dockerignore  conftest.py
tests/e2e/: __init__.py  conftest.py  test_basic_routing.py  test_learning_loop.py  test_slash_commands.py  test_upgrade.py
tests/fixtures/ground-truth/: README.md  ground_truth.json
tests/fixtures/ground-truth/schemas/: ground_truth.schema.json
tests/fixtures/initialized-project/.pongogo/: config.yaml
tests/fixtures/initialized-project/.pongogo/instructions/: manifest.yaml
tests/fixtures/minimal-project/: .gitkeep
tests/fixtures/sample-instructions/project_management/: test_instruction.md
tests/fixtures/sample-instructions/software_engineering/: test_instruction.md
tests/helpers/: __init__.py  assertions.py  matchers.py  mock_mcp_client.py
tests/integration/: __init__.py  conftest.py  test_container_paths.py  test_init_workflow.py  test_routing_accuracy.py  test_routing_engine_version.py  test_schema_migration.py
tests/unit/: __init__.py  test_install_script.sh
tests/unit/cli/: test_config.py  test_console.py  test_init_command.py  test_preferences.py
tests/unit/mcp_server/: __init__.py  test_cli_router.py  test_config.py  test_database.py  test_event_capture.py  test_event_capture_stress.py  test_health_check.py  test_lexicon_db.py  test_routing_engine.py  test_upgrade.py
