[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pongogo"
version = "0.1.0"
description = "AI agent knowledge routing system for software development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pongogo", email = "hello@pongogo.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
keywords = ["ai", "agents", "knowledge", "routing", "mcp"]
dependencies = [
    # CLI dependencies
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    # MCP server dependencies
    "fastmcp>=1.0.0",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-docker>=2.0.0",

    # Linting and formatting
    "ruff>=0.8.0",

    # Type checking
    "mypy>=1.14.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",

    # Pre-commit
    "pre-commit>=3.0.0",
]

[project.scripts]
pongogo = "cli.main:app"
pongogo-server = "mcp_server.server:main"
pongogo-route = "mcp_server.cli:route_cli"

[project.urls]
Homepage = "https://github.com/pongogo/pongogo-to-go"
Documentation = "https://github.com/pongogo/pongogo-to-go#readme"
Repository = "https://github.com/pongogo/pongogo-to-go"
Issues = "https://github.com/pongogo/pongogo-to-go/issues"

[tool.hatch.build]
# src layout - dev-mode-dirs needed for editable installs
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
# Use src layout - packages importable without 'src.' prefix
sources = ["src"]
packages = ["cli", "mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/instructions",
    "/.claude",
]

# =============================================================================
# Ruff - Linting and Formatting
# =============================================================================
[tool.ruff]
# Target Python version
target-version = "py310"

# Line length (same as ruff-format default)
line-length = 88

# Source directories
src = ["src", "tests"]

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (Typer pattern)
    "B904",   # Within except clause, raise with `from` (too strict)
    "ARG001", # Unused function argument (CLI handlers, signal handlers)
    "ARG002", # Unused method argument (interface compliance)
    "E402",   # Module level import not at top (intentional for precompiled patterns)
    "SIM102", # Nested if statements (sometimes more readable)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Known first-party imports
known-first-party = ["cli", "mcp_server"]

[tool.ruff.format]
# Use double quotes (consistent with black)
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Format docstrings
docstring-code-format = true

# =============================================================================
# Mypy - Type Checking
# =============================================================================
[tool.mypy]
# Python version
python_version = "3.10"

# Source paths
files = ["src", "tests"]

# Permissive baseline - tighten incrementally as codebase matures
# Phase 1: Catch only critical errors, ignore pre-existing structural issues
warn_return_any = false
warn_unused_ignores = false  # Avoid noise during baseline
warn_redundant_casts = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false

# Disable error categories with many pre-existing issues
# TODO: Enable these incrementally as codebase is cleaned up
disable_error_code = [
    "union-attr",     # 17 pre-existing issues
    "attr-defined",   # 13 pre-existing issues
    "assignment",     # 24 pre-existing issues
    "operator",       # 6 pre-existing issues
    "arg-type",       # 2 pre-existing issues
    "dict-item",      # 3 pre-existing issues
]

# Import handling
ignore_missing_imports = true

# Error output
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "yaml",
    "fastmcp.*",
    "watchdog.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest - Testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]  # Add src/ to Python path for imports
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

# Markers
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (component interactions)",
    "e2e: End-to-end tests (full workflows in Docker)",
    "slow: Tests that take > 5 seconds",
]

# =============================================================================
# Coverage - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
# Coverage targets from design spec
# Unit: ≥ 80% lines, ≥ 70% branches
# NOTE: fail_under disabled until more tests implemented
# fail_under = 70  # Re-enable when coverage improves
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
